--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   equatable: ^2.0.8
   dartz: ^0.10.1
   internet_connection_checker: ^3.0.1
+  shimmer: ^3.0.0
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
